--- a/dotnet/dotnet.yaml
+++ b/dotnet/dotnet.yaml
@@ -5,17 +5,12 @@
   tasks:
     - name: download the dotnet file
       ansible.builtin.get_url:
-        url: https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-        dest: /home/ubuntu
+        url: https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb 
+        dest: /home/ubuntu/packages-microsoft-prod.deb
     - name: dpkg
       ansible.builtin.dpkg_selections:
         name: packages-microsoft-prod.deb
         selection: install
-    - name: remove the file of .deb
-      ansible.builtin.file:
-        src: packages-microsoft-prod.deb        
-        path: /home/ubuntu/packages-microsoft-prod.deb
-        state: file
     - name: install the dotnet 7 
       ansible.builtin.apt:
         name: dotnet-sdk-7.0
@@ -26,4 +21,3 @@
         name: aspnetcore-runtime-7.0
         update_cache: yes
         state: present
-                         
